--- a/.github/workflows/githubAutoTest.yml
+++ b/.github/workflows/githubAutoTest.yml
@@ -1,4 +1,4 @@
-name: C CI and various checks
+name: testGithubScript
 
 on: [push]
 
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: scriptFromLectureIsh
-      run: cd scripts/testGithubScript.sh
+      run: cd scripts/ && ./testGithubScript.sh
